Feat - show began

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,6 +37,8 @@ services:
     # Common
     Common\:
         resource: '../src/Common'
+        exclude:
+            - '../src/Common/Domain/'
 
 
 
