--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -15,8 +15,8 @@ framework:
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             # async: '%env(MESSENGER_TRANSPORT_DSN)%'
-            # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+            failed: 'doctrine://default?queue_name=failed'
+            sync: 'sync://'
 
         routing:
             Common\Application\Command: sync
