--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /public/bundles/
 /var/
 /vendor/
+/mysql-data/
+/.idea/
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
@@ -18,3 +20,6 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+.idea/blogApi.iml
+.idea/php.xml
