--- a/composer.json
+++ b/composer.json
@@ -112,6 +112,7 @@
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.2.*",
         "symfony/web-profiler-bundle": "6.2.*",
-        "vimeo/psalm": "^5.9"
+        "vimeo/psalm": "^5.9",
+        "weirdan/doctrine-psalm-plugin": "^2.8"
     }
 }
