--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,7 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "fix-cs": "PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --verbose --config=.php-cs-fixer.dist --using-cache=no --path-mode=intersection fix",
+        "fix-cs": "PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --verbose --config=.php-cs-fixer.dist --allow-risky=yes --using-cache=no --path-mode=intersection fix",
         "test": "php vendor/bin/simple-phpunit",
         "psalm": "php vendor/bin/psalm --no-cache"
     },
@@ -103,6 +103,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.16",
         "phpunit/phpunit": "^9.5",
         "psalm/attributes": "^0.1.0",
         "symfony/browser-kit": "6.2.*",
