--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,10 @@
 controllers:
+    api:
+       path: ../src/App/Controller/Api
+       namespace: App\Controller\Api
+       prefix: /api
     resource:
         path: ../src/App/Controller/
         namespace: App\Controller
+        exclude: ../src/App/Controller/Api
     type: attribute
