--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,8 @@
         ],
         "fix-cs": "PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --verbose --config=.php-cs-fixer.dist --allow-risky=yes --using-cache=no --path-mode=intersection fix",
         "test": "php vendor/bin/simple-phpunit",
-        "psalm": "php vendor/bin/psalm --no-cache"
+        "psalm": "php vendor/bin/psalm --no-cache",
+        "coverage": "XDEBUG_MODE=coverage php vendor/bin/simple-phpunit --coverage-html=coverage/$(date +'%d%m%Y')"
     },
 
 
